[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/CanBePickedUp.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[node name="CanBePickedUp" type="Area"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Label3D" type="Label3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
pixel_size = 0.05
billboard = 1
text = "TEST"

[connection signal="body_entered" from="." to="." method="_on_CanBePickedUp_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_CanBePickedUp_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CanBePickedUp_mouse_exited"]
